tests/snapshots/text_objects_test__yaw_yank_around_word.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:22
Lines: 1

Buffer:
hello world testhello [ ]
