tests/snapshots/text_objects_test__yiW_with_punctuation.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:14
Lines: 1

Buffer:
func(args) nex[t]
