tests/snapshots/text_objects_test__yi_double_quote.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:20
Lines: 1

Buffer:
copy "this text" her[e]
