tests/snapshots/text_objects_test__yi_paren.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:13
Lines: 1

Buffer:
func(args) en[d]
