tests/snapshots/text_objects_test__yip_yank_paragraph.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 3:0
Lines: 4

Buffer:
para 1
line 2

[p]ara 2
