tests/snapshots/text_objects_test__yiw_yank_inner_word.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:17
Lines: 1

Buffer:
hello worldhello [ ]
